--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,12 @@ body {
   border: 0;
   padding: 0;
   margin: 0;
+}
+
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -18,6 +24,11 @@ body {
   width: 100px;
   height: 100px;
   background-color: #ffffff;
+}
+
+.rank {
+  margin-left: 15px;
+  text-align: center;
 }
 
 .avatar{
