--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,14 +16,28 @@ body {
   flex-direction: column;
 }
 
+.timer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #f5f5f5;
+}
+
 .canvas{
   border: 1px solid red;
 }
 
 .color{
-  width: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100px;
   background-color: #ffffff;
+  margin-bottom: 10px;
 }
 
 .rank {
