--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,10 +3,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
+  height: 100vh;
   border: 0;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 .main{
@@ -43,10 +46,77 @@ body {
 .rank {
   margin-left: 15px;
   text-align: center;
+  display: flex;
+  overflow: auto;
+  max-width: 1200px;
+}
+
+.user {
+  margin: 10px;
+  margin-bottom: 0;
+  font-weight: 700;
+  min-width: 100px;
 }
 
 .avatar{
   width: 40px;
   height: 40px;
   margin: 5px;
+}
+
+.modal {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  display: none;
+}
+
+.config-button{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 1.5rem;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.config-button img{
+  width: 50px;
+}
+
+.show{
+  display: flex;
+}
+
+.modal-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 30%;
+  min-width: 400px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 10px;
+  border: 2px solid #000000;
+  box-shadow: 3px 3px 3px #0000004D;
+}
+
+@media screen and (max-width: 1366px) {
+  .main{
+    flex-direction: row;
+  }
+
+  .color{
+    width: 100px;
+    height: 100px;
+  }
 }
